2002-08-13  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.3

	* configure.in: Bumped to 1.0.3

	* NEWS: Updated for 1.0.3
	
2002-08-13  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-man.c:
	(yelp_man_remove_duplicates_from_manpath): 
	- return a GSList instead
	- Hopefully fixed #90385
	(yelp_man_init): using a GSList for manpathes instead of gchar **.

2002-08-05  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl:
        - apply bold formating to guibuttons
        - apply mono formating to commands
        - fix left-margin instead of margin-left
        - relief from table formating quirks
        - leave space after inline media objects
        - make <b> create a consistent result
        - make bulleted and numbered list items align consistently

	* src/yelp-db2html.c:
        - include quotes around stylesheet path so its correctly passed in

	* stylesheets/yelp-custom.xsl:
        - move parameterisation of admonition graphics to
	  yelp-customization.xsl 

2002-08-05  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.2

	* NEWS: updated for 1.0.2

	* configure.in: 
	- Version updated to 1.0.2
	- Requirement on libgnome to 2.0.2
	- Requirement on gtkhtml2 to 1.99.10

2002-08-04  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-scrollkeeper.c (scrollkeeper_parse_index): 
	- Will probably solve #89431.

2002-08-04  Padraig O'Briain  <padraig.obriain@sun.com>
	
	* src/yelp-reader.c (yelp_reader_start): Fixes #89038
	
2002-08-04  Mikael Hallendal  <micke@codefactory.se>


	* src/yelp-info.c (yelp_info_read_info_dir): 
	- support info files that is named name.gz. Fixes #85324.
	- Remove duplicates.

	* src/yelp-window.c:
	(window_init): don't automatically go to uri "toc:" in history. 
	(yelp_window_new): don't open "toc:", this is now done from
	  yelp_base_new_window 
	(yelp_window_open_uri): goto the uri in history, Fixes #86538.

	* src/yelp-base.c: