@@ -91,7 +91,6 @@
 </xsl:template>
 
 <xsl:template name="body.attributes">
-  <xsl:attribute name="bgcolor">white</xsl:attribute>
   <xsl:attribute name="text">black</xsl:attribute>
   <xsl:attribute name="link">#0000FF</xsl:attribute>
   <xsl:attribute name="vlink">#840084</xsl:attribute>
