@@ -1,3 +1,12 @@
+2002-08-16  Padraig O'Briain  <padraig.obriain@sun.com>
+
+	* src/yelp-html-gtkhtml1.c
+	* src/yelp-html-gtkhtml2.c
+	* src/yelp-view-content.c
+	* src/yelp-view-index.c
+	* stylesheets/docbook/html/docdbook.xsl
+	Remove reference to bgcolor being set to white (bug #89838)
+
 2002-08-13  Mikael Hallendal  <micke@codefactory.se>
 
 	* Release 1.0.3
